--- a/css/event.html
+++ b/css/event.html
@@ -100,12 +100,12 @@
             <article>
                 <h1>Gambar Pemandangan</h1>
                 <content>
-                    <img src="gambar.jpg" alt="gambar" onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)" onclick="onClick(this)">
-                    <img src="gambar1.jpg" alt="gambar1" onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)" onclick="onClick(this)">
-                    <img src="gambar2.jpg" alt="gambar2" onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)" onclick="onClick(this)">
-                    <img src="gambar4.jpg" alt="gambar4" onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)" onclick="onClick(this)">
-                    <img src="gambar5.jpg" alt="gambar5" onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)" onclick="onClick(this)">
-                    <img src="gambar6.jpg" alt="gambar6" onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)" onclick="onClick(this)">
+                    <img src="gambar/gambar.jpg" alt="gambar" onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)" onclick="onClick(this)">
+                    <img src="gambar/gambar1.jpg" alt="gambar1" onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)" onclick="onClick(this)">
+                    <img src="gambar/gambar2.jpg" alt="gambar2" onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)" onclick="onClick(this)">
+                    <img src="gambar/gambar4.jpg" alt="gambar4" onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)" onclick="onClick(this)">
+                    <img src="gambar/gambar5.jpg" alt="gambar5" onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)" onclick="onClick(this)">
+                    <img src="gambar/gambar6.jpg" alt="gambar6" onmouseover="onMouseOver(this)" onmouseout="onMouseOut(this)" onclick="onClick(this)">
                     <p><strong>kesimpulan :</strong></p>
                 </content>
             </article>
