--- a/css/gambar.html
+++ b/css/gambar.html
@@ -87,12 +87,12 @@
             <article>
                 <h1>Gambar Pemandangan</h1>
                 <content>
-                <img src="gambar.jpg" alt="gambar" >
-                <img src="gambar1.jpg" alt="gambar1" >
-                <img src="gambar2.jpg" alt="gambar2">
-                <img src="gambar4.jpg" alt="gambar4">
-                <img src="gambar5.jpg" alt="gambar5">
-                <img src="gambar6.jpg" alt="gambar6" >
+                <img src="gambar/gambar.jpg" alt="gambar" >
+                <img src="gambar/gambar1.jpg" alt="gambar1" >
+                <img src="gambar/gambar2.jpg" alt="gambar2">
+                <img src="gambar/gambar4.jpg" alt="gambar4">
+                <img src="gambar/gambar5.jpg" alt="gambar5">
+                <img src="gambar/gambar6.jpg" alt="gambar6" >
                 <p><strong>kesimpulan :</strong></p>
             </content>
             
