--- a/css/audio.html
+++ b/css/audio.html
@@ -78,11 +78,11 @@
             <h1>Audio</h1>
                 <content>
                 <audio controls autoplay>
-                    <source src="suara.mp3" type="audio/mpeg">
+                    <source src="gambar/audio/suara.mp3" type="audio/mpeg">
                     Browser tidak mendukung pemutar video
                 </audio><br>
                 <audio controls muted>
-                    <source src="suara1.mp3" type="audio/mpeg">
+                    <source src="gambar/audio/suara1.mp3" type="audio/mpeg">
                     Browser tidak mendukung pemutar audio
                 </audio><br>
                 </content>
