--- a/css/video.html
+++ b/css/video.html
@@ -78,7 +78,7 @@
             <h1>Video</h1>
             <content>
                 <video width="420px" height="315px" controls autoplay>
-                    <source src="Skateboard.mp4" type="video/mp4">
+                    <source src="gambar/video/Skateboard.mp4" type="video/mp4">
                     Browser tidak mendukung.
                 </video>
                 <iframe width="420px" height="315px"
